--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "svelte-tablesort",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mattiash/svelte-tablesort"
+  },
+  "license": "ISC",
+  "author": {
+    "name": "Mattias Holmlund",
+    "email": "mattias@holmlund.se",
+    "url": "https://mattias.holmlund.se"
+  },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "rollup": "^1.10.1",
