--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-svelte": "^5.1.0",
         "rollup-plugin-terser": "^5.1.0",
+        "sirv-cli": "^0.4.4",
         "svelte": "^3.6.4"
     },
     "dependencies": {
-        "sirv-cli": "^0.4.4"
+        "generator-sort": "^1.0.0"
     },
     "scripts": {
         "build": "rollup -c",
