--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "email": "mattias@holmlund.se",
         "url": "https://mattias.holmlund.se"
     },
+    "svelte": "index.js",
     "devDependencies": {
         "npm-run-all": "^4.1.5",
         "rollup": "^1.16.6",
